--- a/static/css/stylesheet.css
+++ b/static/css/stylesheet.css
@@ -49,13 +49,14 @@
   top: 0;
   left: 0;
   right: 0;
-  bottom: 0;
+  /* bottom: 0; */
   z-index: 4;
   display: flex;
   flex-direction: column;
-  position: sticky;
+  position: fixed;
   border-bottom: 1px solid var(--main-dark-colour);
-  margin-bottom: 20px;
+  background-color: var(--soft-background-colour);
+  height: fit-content;
   
 }
 
@@ -105,7 +106,6 @@
 
 #header {
   padding: 20px;
-  position: sticky;
 }
 
 body {
@@ -116,8 +116,8 @@ body {
   width: 100vw;
   background-color: var(--soft-background-colour);
   overflow: scroll;
-  position: absolute;
-  height: 100vh;
+  /* height: 100vh; */
+  /* position: absolute; */
 }
 
 
@@ -143,6 +143,7 @@ body {
       rgb(2, 9, 18) 100%);
   height: var(--cover-page-height);
   width: 100vw;
+
   position: absolute;
   opacity: 1;
   z-index: 0;
@@ -173,7 +174,7 @@ body {
   flex-direction: column;
   align-items: center;
   width: 100vw;
-  height: auto;
+  /* min-height: var(--cover-page-height); */
   justify-content: center;
 }
 
@@ -191,7 +192,7 @@ body {
   /* bottom: 0; */
   /* top: 0; */
   position: relative;
-  padding-top: 45px;
+  padding-top: 0px;
   padding-bottom: 0px;
   padding-left: 100px;
   padding-right: 100px;
@@ -603,7 +604,7 @@ a:active {
   .header-and-nav {
     width: 100vw;
     margin: 0px;
-
+    background-color: var(--soft-background-colour);
   }
 
 
@@ -766,6 +767,8 @@ a:active {
 /* Style the navigation menu */
 .topnav {
   overflow: hidden;
+  background-color: var(--soft-background-colour);
+
 }
 
 /* Hide the links inside the navigation menu (except for logo/home) */
